<resources>
    <string name="app_name">Stechuhr</string>
    <string name="btnStartLbl">Stechuhr starten</string>
    <string name="btnStopLbl">Stechuhr stoppen</string>
    <string name="btnExportLbl">Exportiere Stundenzettel</string>
    <string name="chckbxCorrectTimesLbl">Korrigiere Start- und Endzeiten</string>
    <string name="strNoSessionsRecorded">Bisher noch keine Arbeitszeiten aufgezeichnet.</string>
    <string name="txtViewAboutLbl">Über diese App</string>
    <string name="stundenzettelExportFailed">Da ist wohl was schief gelaufen :(</string>
    <string name="stundenzettel_headline">Stundenzettel</string>
    <string name="menu_title_delete_database">Datenbank löschen</string>
    <string name="delete_data_dialog_message">Wirklich alle Daten löschen?\nDiese Aktion kann nicht rückgängig gemacht werden.</string>
    <string name="delete_data_dialog_title">Daten löschen</string>
    <string name="yes">Ja</string>
    <string name="cancel">Abbrechen</string>
    <string name="permission_explanation_title">Speicherzugriff</string>
    <string name="permissions_explanation_content">Diese App benötigt Zugriff auf den Gerätespeicher um die Arbeitszeiten zu exportieren.\nWenn du den Zugriff verweigerst kasst du zwar weiterhin Arbeitszeiten aufzeichnen, jedoch keinen Stundenzettel exportieren.</string>
    <string name="stundenzettel_table_headline">Datum\t\t\tStart\t\tEnde\t\tDauer</string>
    <string name="signature_line_labelling">Datum\t\t\t\t\tUnterschrift Hilfskraft\t\t\t\t\t\t\tUnterschrift Vorgesetzte/-r</string>
    <string name="signature_line">%s\t_____________________________________</string>
    <string name="settings">Einstellungen</string>
    <string name="correct_start_end_preference_title">Korrigiere Start- und Endzeiten</string>
    <string name="correct_start_end_preference_summary">Geringfügig Beschäftigte dürfen nur an Werktagen von 6 bis 23 Uhr arbeiten, mit dieser Einstellung werden die exportierten Stundenzettel dahingehend \"beschönigt\".\nACHTUNG: Diese Funktion ist experimentell und kann dazu führen, dass die Arbeitszeiten auf deinem Stundenzettel nicht stimmen. Jegliche Risiken die mit der Fälschung der Arbeitszeitdaten einhergehen liegen beim Nutzer.</string>
    <string name="correct_start_end_preference_key">de.tastykatana.zeiterfassung.correctstartendtimespreferencekey</string>
    <string name="pref_category_export_title">Stundenzettelexport</string>
    <string name="user_name_preference_title">Name</string>
    <string name="user_name_preference_key">de.tastykatana.zeiterfassung.usernamepreferencekey</string>
    <string name="job_name_preference_key">de.tastykatana.zeiterfassung.jobnamepreferencekey</string>
    <string name="job_name_preference_title">Jobbeschreibung</string>
    <string name="timeframe">Zeitrahmen</string>
    <string name="pick_month">Monat auswählen</string>
    <string name="share">Teilen</string>
    <string name="file_exported_snackbar">Datei gespeichert als %s</string>
    <string name="danger_zone_category_title">Danger Zone</string>
    <string name="filepath_preference_title">Dateipfad für export</string>
    <string name="filepath_preference_summary">ACHTUNG: Das Ändern dieser Einstellung kann zu Fehlverhalten führen. Bitte nur verändern wenn du weißt was du tust.</string>
    <string name="filepath_preference_key">de.tastykatana.zeiterfassung.filepathforexport</string>
    <string name="filepath_default_value">/Documents/Stundenzettel</string>
    <string name="time_sum_for_month">Gesamtzeit: %1$d:%2$d</string>
    <string name="running_notification_title">Stechuhr läuft</string>
    <string name="running_notification_text">Tippe hier um die App zu öffnen und die Stechuhr zu stoppen.</string>
</resources>
